[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameObjects/Enemies/Dummy.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Thumb1.wav" type="AudioStream" id=2]
[ext_resource path="res://Sounds/Thumb2.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Thumb3.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 250 )

[node name="Dummy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 25, 250 )
shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.815686, 0.172549, 0.172549, 1 )
polygon = PoolVector2Array( 0, 0, 0, 500, 50, 500, 50, 0 )

[node name="AudioStreamPlayer2D1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
attenuation = 0.659754
